finished second and third block

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalie.css">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -53,14 +52,12 @@
                         or highly polished chrome.
                     </p>
                     <a href="" class="btn">Order Us</a>
-                    </p>
                     <div class="paginations">
                         <a href="" class="circle"></a>
                         <a href="" class="circle circle__active"></a>
                         <a href="" class="circle"></a>
                     </div>
                 </div>
-
             </div>
         </div>
     </header>
@@ -69,27 +66,60 @@
         <div class="second__block">
             <div class="container">
                 <div class="second__block-top">
-                    <h3 class="small__title">Featured</h3>
-                    <h3 class="small__title">New</h3>
-                    <a href="" class="right__btn">explore all</a>
+                    <div class="slider__text">
+                        <h3 class="small__title">Featured</h3>
+                        <h3 class="small__title-faded">New</h3>
+                    </div>
+                    <a href="#" class="right__btn">explore all</a>
                 </div>
                 <div class="second__block-content">
                     <div class="cube">
-                        <a href="#" class="small__btn"></a>
-                        <p>Fishnet Chair</p>
-                        <p>Seat and back with upholstery made of cold cure foam
-                            . Steel frame, available in matt powder-coated black
-                             or highly polished chrome.</p>
+                        <img class="boxes opacity" src="img/product-1@3x.jpg" alt="">
+                        <div class="inside__cube">
+                            <a href="#" class="small__btn"><img class="middle__arrow" src="img/middle__arrow.png"
+                                    width=12px height=20px alt="arrow"></a>
+                            <p class="box__text">Fishnet Chair</p>
+                            <p class="box__text-small">Seat and back with upholstery made of cold cure foam
+                                . Steel frame, available in matt powder-coated black
+                                or highly polished chrome.</p>
+                        </div>
                     </div>
-                    <img src="img/product-1@3x.jpg" alt="">
-                    <img src="img/product-2@3x.jpg" alt="">
-                    <img src="img/product-3@3x.jpg" alt="">
-                    <img src="img/product-4@3x.jpg" alt="">
+                    <img class="boxes" src="img/product-2@3x.jpg" alt="">
+                    <img class="boxes" src="img/product-3@3x.jpg" alt="">
+                    <img class="boxes" src="img/product-4@3x.jpg" alt="">
                 </div>
-               
-                
 
 
+
+
+
+            </div>
+        </div>
+        <div class="third__block">
+            <div class="flex">
+                <div class="first__chair">
+                    <div class="chairs__content">
+                        <p class="color__text blue">exclusive</p>
+                        <h3 class="small__title">Fishnet Chair</h3>
+                        <p class="regular__text-third">Seat and back with upholstery made of cold cure foam. Steel frame,
+                            available in matt
+                            powder-coated black
+                            or highly polished chrome.</p>
+                        <a href="" class="btn">Order Us</a>
+                    </div>
+                </div>
+                <div class="second__chair">
+                    <div class="chairs__content">
+                        <p class="color__text blue">exclusive</p>
+                        <h3 class="small__title">Fishnet Chair</h3>
+                        <p class="regular__text-third">Seat and back with upholstery made of cold cure foam. Steel
+                            frame,
+                            available in matt
+                            powder-coated black
+                            or highly polished chrome.</p>
+                        <a href="" class="btn">Order Us</a>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
