Blocks four and five completely finished. Block six in process.

--- a/index.html
+++ b/index.html
@@ -88,36 +88,105 @@
                     <img class="boxes" src="img/product-3@3x.jpg" alt="">
                     <img class="boxes" src="img/product-4@3x.jpg" alt="">
                 </div>
-
-
-
-
-
             </div>
         </div>
         <div class="third__block">
-            <div class="flex">
-                <div class="first__chair">
-                    <div class="chairs__content">
-                        <p class="color__text blue">exclusive</p>
-                        <h3 class="small__title">Fishnet Chair</h3>
-                        <p class="regular__text-third">Seat and back with upholstery made of cold cure foam. Steel frame,
-                            available in matt
-                            powder-coated black
-                            or highly polished chrome.</p>
-                        <a href="" class="btn">Order Us</a>
+            <div class="first__chair">
+                <div class="chairs__content">
+                    <p class="color__text blue">exclusive</p>
+                    <h3 class="chair__title">Fishnet Chair</h3>
+                    <p class="regular__text-third">Seat and back with upholstery made of cold cure foam. Steel
+                        frame,
+                        available in matt
+                        powder-coated black
+                        or highly polished chrome.</p>
+                    <a href="" class="btn">Order Us</a>
+                </div>
+            </div>
+            <div class="second__chair">
+                <div class="chairs__content">
+                    <p class="color__text blue">exclusive</p>
+                    <h3 class="chair__title">Fishnet Chair</h3>
+                    <p class="regular__text-third">Seat and back with upholstery made of cold cure foam. Steel
+                        frame,
+                        available in matt
+                        powder-coated black
+                        or highly polished chrome.</p>
+                    <a href="" class="btn">Order Us</a>
+                </div>
+            </div>
+        </div>
+        <div class="fourth__block">
+            <div class="container">
+                <div class="second__block-top">
+                    <div class="slider__text">
+                        <h3 class="trending__title">Trending Products</h3>
+                    </div>
+                    <a href="#" class="right__btn">explore all</a>
+                </div>
+                <div class="fourth__block-content">
+                    <div class="line">
+                        <img class="boxes_1" src="img/product-11.jpg" alt="">
+                        <img class="boxes_1" src="img/product-21.jpg" alt="">
+                        <img class="boxes_1" src="img/product-31.jpg" alt="">
+                    </div>
+                    <div class="line">
+                        <img class="boxes_1" src="img/product-41.jpg" alt="">
+                        <img class="boxes_1" src="img/product-5.jpg" alt="">
+                        <img class="boxes_1" src="img/product-6.jpg" alt="">
                     </div>
                 </div>
-                <div class="second__chair">
-                    <div class="chairs__content">
-                        <p class="color__text blue">exclusive</p>
-                        <h3 class="small__title">Fishnet Chair</h3>
+            </div>
+        </div>
+        <div class="fifth__block">
+            <div class="container">
+                <div class="slider__content">
+                    <p class="color__text red">Hot deal</p>
+                    <h2 class="largest__text">Fishnet Chair</h2>
+                    <p class="regular__text">
+                        Seat and back with upholstery made of cold cure foam. Steel frame, available in matt
+                        powder-coated black
+                        or highly polished chrome.
+                    </p>
+                    <a href="" class="btn">Order Us</a>
+                    <div class="paginations">
+                        <a href="" class="circle"></a>
+                        <a href="" class="circle circle__active"></a>
+                        <a href="" class="circle"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="sixth__block">
+            <div class="container">
+                <div class="test">
+                    <div class="test__child">
+                        <!-- <p class="color__text blue">exclusive</p>
+                        <h3 class="chair__title">Fishnet Chair</h3>
                         <p class="regular__text-third">Seat and back with upholstery made of cold cure foam. Steel
                             frame,
                             available in matt
                             powder-coated black
                             or highly polished chrome.</p>
-                        <a href="" class="btn">Order Us</a>
+                        <a href="" class="btn">Order Us</a> -->
+                        <div class="plw plw__color">
+                            
+                        </div>
+                    </div>
+                    <div class="test__child">
+                        <div class="plw">
+                            <div class="test">
+                                <div class="test__child2"><div class="plw__small plw__color"></div></div>
+                                <div class="test__child2"><div class="plw__small plw__color"></div></div>
+                                <div class="test__child2"><div class="plw__small plw__color"></div></div>
+                                <div class="test__child2"><div class="plw__small plw__color"></div></div>
+                            </div>
+                        </div>
+                        
+                            <!-- <img class="boxes" src="img/product-2-sm.jpg" alt="">
+                            <img class="boxes" src="img/product-3-sm.jpg" alt="">
+                            <img class="boxes" src="img/product-4-sm.jpg" alt="">
+                            <img class="boxes" src="img/product-5-sm.jpg" alt=""> -->
                     </div>
                 </div>
             </div>
