all main tasks for the project are completed

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Interior</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -74,7 +75,7 @@
                 </div>
                 <div class="second__block-content">
                     <div class="cube">
-                        <img class="boxes opacity" src="img/product-1@3x.jpg" alt="">
+                        <img class="boxes opacity" src="img/product-1.jpg" alt="">
                         <div class="inside__cube">
                             <a href="#" class="small__btn"><img class="middle__arrow" src="img/middle__arrow.png"
                                     width=12px height=20px alt="arrow"></a>
@@ -84,9 +85,9 @@
                                 or highly polished chrome.</p>
                         </div>
                     </div>
-                    <img class="boxes" src="img/product-2@3x.jpg" alt="">
-                    <img class="boxes" src="img/product-3@3x.jpg" alt="">
-                    <img class="boxes" src="img/product-4@3x.jpg" alt="">
+                    <img class="boxes" src="img/product-2.jpg" alt="">
+                    <img class="boxes" src="img/product-3.jpg" alt="">
+                    <img class="boxes" src="img/product-4.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -159,42 +160,102 @@
         </div>
         <div class="sixth__block">
             <div class="container">
-                <div class="test">
-                    <div class="test__child">
-                        <!-- <p class="color__text blue">exclusive</p>
-                        <h3 class="chair__title">Fishnet Chair</h3>
-                        <p class="regular__text-third">Seat and back with upholstery made of cold cure foam. Steel
-                            frame,
-                            available in matt
-                            powder-coated black
-                            or highly polished chrome.</p>
-                        <a href="" class="btn">Order Us</a> -->
-                        <div class="plw plw__color">
-                            
+                <div class="collapse">
+                    <div class="first__child">
+                        <div class="pillow__text">
+                            <p class="color__text blue">exclusive</p>
+                            <h3 class="chair__title">Fishnet Chair</h3>
+                            <p class="regular__text-third">Seat and back with upholstery made of cold cure foam. Steel
+                                frame,
+                                available in matt
+                                powder-coated black
+                                or highly polished chrome.</p>
+                            <a href="" class="btn">Order Us</a>
                         </div>
                     </div>
-                    <div class="test__child">
-                        <div class="plw">
-                            <div class="test">
-                                <div class="test__child2"><div class="plw__small plw__color"></div></div>
-                                <div class="test__child2"><div class="plw__small plw__color"></div></div>
-                                <div class="test__child2"><div class="plw__small plw__color"></div></div>
-                                <div class="test__child2"><div class="plw__small plw__color"></div></div>
+                    <div class="first__child">
+                        <div class="pillow__size">
+                            <div class="collapse">
+                                <div class="second__child">
+                                    <img class="boxes" src="img/product-2-sm.jpg" alt="">
+                                </div>
+                                <div class="second__child">
+                                    <img class="boxes" src="img/product-3-sm.jpg" alt="">
+                                </div>
+                                <div class="second__child">
+                                    <img class="boxes" src="img/product-4-sm.jpg" alt="">
+                                </div>
+                                <div class="second__child">
+                                    <img class="boxes" src="img/product-5-sm.jpg" alt="">
+                                </div>
                             </div>
                         </div>
-                        
-                            <!-- <img class="boxes" src="img/product-2-sm.jpg" alt="">
-                            <img class="boxes" src="img/product-3-sm.jpg" alt="">
-                            <img class="boxes" src="img/product-4-sm.jpg" alt="">
-                            <img class="boxes" src="img/product-5-sm.jpg" alt=""> -->
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="seventh__block">
+            <div class="container">
+                <div class="seventh__block-content">
+                    <div class="sb__content-text">
+                        <p class="m__app-text">mobile app</p>
+                        <h2 class="largest__text-bottom">Find. Follow. Favorite.</h2>
+                        <p class="sb__small-text">Save your favorites and share your style.</p>
+                    </div>
+                    <div class="sb__content-img">
+                        <img src="img/app-store.jpg" width="135" height="40" alt="">
+                        <img src="img/google-play.jpg" width="135" height="40" alt="">
+                    </div>
+                </div>
+
             </div>
         </div>
     </body>
     <footer>
         <div class="container">
+            <div class="flex">
+                <div class="contact__us">
+                    <p class="footer__upper-text">Contact Us</p>
+                    <p class="contact__us-text">132A Bridge Road Richmond VIC<br>
+                        Australia.
+                        <br>
+                        <br>
+                        Talk to us on 1300 132<br>
+                        info@interior.com</p>
 
+                </div>
+                <div class="useful__info">
+                    <p class="footer__upper-text">Useful Information</p>
+                    <div class="first__info">
+                        <p>Sales terms</p>
+                        <p>Customer care</p>
+                        <p>Delivery</p>
+                    </div>
+                    <div class="second__info">
+                        <p>Architect accounts</p>
+                        <p>Careers</p>
+                        <p>Exchanges & returns</p>
+                    </div>
+                </div>
+                <div class="stay__in-touch">
+                    <p class="footer__upper-text">Let’s Stay in Touch!</p>
+                    <p class="stay__in-touch-text">Suscribe to know about our latest news, products and special
+                        offers just for suscribers.</p>
+                    <form name="suscribers" action="">
+                        <input class="email__subscribe" type="email" placeholder="your email address">
+                    </form>
+                </div>
+            </div>
+            <div class="flex">
+                <p class="copy">© Copyright - INTERIOR 2016. All Rights Reserved.</p>
+                <div class="social">
+                    <a class="fb" href="#"></a>
+                    <a class="tw" href="#"></a>
+                    <a class="google" href="#"></a>
+                    <a class="pin" href="#"></a>
+                </div>
+                <p class="copy">Terms & Conditions  /  Privacy policy & Cookies</p>
+            </div>
         </div>
     </footer>
 
