added some html for page contacts

--- a/index.html
+++ b/index.html
@@ -15,34 +15,34 @@
     <header>
         <div class="first__block">
             <div class="container">
-                <nav class="navigation"></nav>
-                <div class="header__content">
-                    <a href="index.html">
-                        <img src="img/logo.svg" class="logo" alt="logo">
-                    </a>
-                    <div class="navigation__wrapper">
-                        <div class="navigation__btn">
-                            <span class="icon__bars"></span>
+                <nav class="navigation">
+                    <div class="header__content">
+                        <a href="index.html">
+                            <img src="img/logo.svg" class="logo" alt="logo">
+                        </a>
+                        <div class="navigation__wrapper">
+                            <div class="navigation__btn">
+                                <span class="icon__bars"></span>
+                            </div>
+                            <ul class="menu">
+                                <li class="menu__list">
+                                    <a class="menu__link-active" href="index.html">HOME</a>
+                                </li>
+                                <li class="menu__list">
+                                    <a class="menu__link" href="products.html">PRODUCTS</a>
+                                </li>
+                                <li class="menu__list">
+                                    <a class="menu__link" href="history.html">HISTORY</a>
+                                </li>
+                                <li class="menu__list">
+                                    <a class="menu__link" href="showroom.html">SHOWROOM</a>
+                                </li>
+                                <li class="menu__list ">
+                                    <a class="menu__link" href="contact.html">CONTACT</a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="menu">
-                            <li class="menu__list">
-                                <a class="menu__link-active" href="index.html">HOME</a>
-                            </li>
-                            <li class="menu__list">
-                                <a class="menu__link" href="products.html">PRODUCTS</a>
-                            </li>
-                            <li class="menu__list">
-                                <a class="menu__link" href="work.html">HISTORY</a>
-                            </li>
-                            <li class="menu__list">
-                                <a class="menu__link" href="aftercare.html">SHOWROOM</a>
-                            </li>
-                            <li class="menu__list">
-                                <a class="menu__link" href="contact.html">CONTACT</a>
-                            </li>
-                        </ul>
                     </div>
-                </div>
                 </nav>
                 <div class="slider__content">
                     <p class="color__text green">Trending</p>
@@ -254,7 +254,7 @@
                     <a class="google" href="#"></a>
                     <a class="pin" href="#"></a>
                 </div>
-                <p class="copy">Terms & Conditions  /  Privacy policy & Cookies</p>
+                <p class="copy">Terms & Conditions / Privacy policy & Cookies</p>
             </div>
         </div>
     </footer>
