--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
                         </a>
                         <div class="navigation__wrapper">
                             <div class="navigation__btn">
-                                <span class="icon__bars"></span>
+                                <span class="icon-text"></span>
                             </div>
                             <ul class="menu">
                                 <li class="menu__list">
@@ -52,7 +53,7 @@
                         powder-coated black
                         or highly polished chrome.
                     </p>
-                    <a href="" class="btn">Order Us</a>
+                    <div class="btn__body"><a href="" class="btn">Order Us</a></div>
                     <div class="paginations">
                         <a href="" class="circle"></a>
                         <a href="" class="circle circle__active"></a>
@@ -68,8 +69,8 @@
             <div class="container">
                 <div class="second__block-top">
                     <div class="slider__text">
-                        <h3 class="small__title">Featured</h3>
-                        <h3 class="small__title-faded">New</h3>
+                        <a href="#" class="small__title">Featured</a>
+                        <a href="#" class="small__title-faded">New</a>
                     </div>
                     <a href="#" class="right__btn">explore all</a>
                 </div>
@@ -85,9 +86,9 @@
                                 or highly polished chrome.</p>
                         </div>
                     </div>
-                    <img class="boxes" src="img/product-2.jpg" alt="">
-                    <img class="boxes" src="img/product-3.jpg" alt="">
-                    <img class="boxes" src="img/product-4.jpg" alt="">
+                    <a href="#"><img class="boxes" src="img/product-2.jpg" alt=""></a>
+                    <a href="#"><img class="boxes" src="img/product-3.jpg" alt=""></a>
+                    <a href="#"><img class="boxes" src="img/product-4.jpg" alt=""></a>
                 </div>
             </div>
         </div>
@@ -101,7 +102,7 @@
                         available in matt
                         powder-coated black
                         or highly polished chrome.</p>
-                    <a href="" class="btn">Order Us</a>
+                    <div class="btn__body"><a href="" class="btn">Order Us</a></div>
                 </div>
             </div>
             <div class="second__chair">
@@ -113,7 +114,7 @@
                         available in matt
                         powder-coated black
                         or highly polished chrome.</p>
-                    <a href="" class="btn">Order Us</a>
+                    <div class="btn__body"><a href="" class="btn">Order Us</a></div>
                 </div>
             </div>
         </div>
@@ -127,14 +128,14 @@
                 </div>
                 <div class="fourth__block-content">
                     <div class="line">
-                        <img class="boxes_1" src="img/product-11.jpg" alt="">
-                        <img class="boxes_1" src="img/product-21.jpg" alt="">
-                        <img class="boxes_1" src="img/product-31.jpg" alt="">
+                        <a href="#"><img class="boxes_1" src="img/product-11.jpg" alt=""></a>
+                        <a href="#"><img class="boxes_1" src="img/product-21.jpg" alt=""></a>
+                        <a href="#"><img class="boxes_1" src="img/product-31.jpg" alt=""></a>
                     </div>
                     <div class="line">
-                        <img class="boxes_1" src="img/product-41.jpg" alt="">
-                        <img class="boxes_1" src="img/product-5.jpg" alt="">
-                        <img class="boxes_1" src="img/product-6.jpg" alt="">
+                        <a href="#"><img class="boxes_1" src="img/product-41.jpg" alt=""></a>
+                        <a href="#"><img class="boxes_1" src="img/product-5.jpg" alt=""></a>
+                        <a href="#"><img class="boxes_1" src="img/product-6.jpg" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -149,7 +150,7 @@
                         powder-coated black
                         or highly polished chrome.
                     </p>
-                    <a href="" class="btn">Order Us</a>
+                    <div class="btn__body"><a href="" class="btn">Order Us</a></div>
                     <div class="paginations">
                         <a href="" class="circle"></a>
                         <a href="" class="circle circle__active"></a>
@@ -170,23 +171,23 @@
                                 available in matt
                                 powder-coated black
                                 or highly polished chrome.</p>
-                            <a href="" class="btn">Order Us</a>
+                            <div class="btn__body"><a href="" class="btn">Order Us</a></div>
                         </div>
                     </div>
                     <div class="first__child">
                         <div class="pillow__size">
                             <div class="collapse">
                                 <div class="second__child">
-                                    <img class="boxes" src="img/product-2-sm.jpg" alt="">
+                                    <a href="#"><img class="boxes" src="img/product-2-sm.jpg" alt=""></a>
                                 </div>
                                 <div class="second__child">
-                                    <img class="boxes" src="img/product-3-sm.jpg" alt="">
+                                    <a href="#"><img class="boxes" src="img/product-3-sm.jpg" alt=""></a>
                                 </div>
                                 <div class="second__child">
-                                    <img class="boxes" src="img/product-4-sm.jpg" alt="">
+                                    <a href="#"><img class="boxes" src="img/product-4-sm.jpg" alt=""></a>
                                 </div>
                                 <div class="second__child">
-                                    <img class="boxes" src="img/product-5-sm.jpg" alt="">
+                                    <a href="#"><img class="boxes" src="img/product-5-sm.jpg" alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -203,62 +204,62 @@
                         <p class="sb__small-text">Save your favorites and share your style.</p>
                     </div>
                     <div class="sb__content-img">
-                        <img src="img/app-store.jpg" width="135" height="40" alt="">
-                        <img src="img/google-play.jpg" width="135" height="40" alt="">
+                        <a href="#"><img src="img/app-store.jpg" width="135" height="40" alt=""></a>
+                        <a href="#"><img src="img/google-play.jpg" width="135" height="40" alt=""></a>
                     </div>
                 </div>
 
             </div>
         </div>
+        <footer>
+            <div class="container">
+                <div class="flex">
+                    <div class="contact__us">
+                        <p class="footer__upper-text">Contact Us</p>
+                        <p class="contact__us-text">132A Bridge Road Richmond VIC<br>
+                            Australia.
+                            <br>
+                            <br>
+                            Talk to us on 1300 132<br>
+                            info@interior.com</p>
+
+                    </div>
+                    <div class="useful__info">
+                        <p class="footer__upper-text">Useful Information</p>
+                        <div class="first__info">
+                            <a href="#">Sales terms</a>
+                            <a href="#">Customer care</a>
+                            <a href="#">Delivery</a>
+                        </div>
+                        <div class="second__info">
+                            <a href="#">Architect accounts</a>
+                            <a href="#">Careers</a>
+                            <a href="#">Exchanges & returns</a>
+                        </div>
+                    </div>
+                    <div class="stay__in-touch">
+                        <p class="footer__upper-text">Let’s Stay in Touch!</p>
+                        <p class="stay__in-touch-text">Suscribe to know about our latest news, products and special
+                            offers just for suscribers.</p>
+                        <form name="suscribers" action="">
+                            <input class="email__subscribe" type="email" placeholder="your email address">
+                        </form>
+                    </div>
+                </div>
+                <div class="flex">
+                    <p class="copy">© Copyright - INTERIOR 2016. All Rights Reserved.</p>
+                    <div class="social">
+                        <a class="fb" href="#"></a>
+                        <a class="tw" href="#"></a>
+                        <a class="google" href="#"></a>
+                        <a class="pin" href="#"></a>
+                    </div>
+                    <p class="copy">Terms & Conditions / Privacy policy & Cookies</p>
+                </div>
+            </div>
+        </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="js/main.js"></script>
     </body>
-    <footer>
-        <div class="container">
-            <div class="flex">
-                <div class="contact__us">
-                    <p class="footer__upper-text">Contact Us</p>
-                    <p class="contact__us-text">132A Bridge Road Richmond VIC<br>
-                        Australia.
-                        <br>
-                        <br>
-                        Talk to us on 1300 132<br>
-                        info@interior.com</p>
-
-                </div>
-                <div class="useful__info">
-                    <p class="footer__upper-text">Useful Information</p>
-                    <div class="first__info">
-                        <p>Sales terms</p>
-                        <p>Customer care</p>
-                        <p>Delivery</p>
-                    </div>
-                    <div class="second__info">
-                        <p>Architect accounts</p>
-                        <p>Careers</p>
-                        <p>Exchanges & returns</p>
-                    </div>
-                </div>
-                <div class="stay__in-touch">
-                    <p class="footer__upper-text">Let’s Stay in Touch!</p>
-                    <p class="stay__in-touch-text">Suscribe to know about our latest news, products and special
-                        offers just for suscribers.</p>
-                    <form name="suscribers" action="">
-                        <input class="email__subscribe" type="email" placeholder="your email address">
-                    </form>
-                </div>
-            </div>
-            <div class="flex">
-                <p class="copy">© Copyright - INTERIOR 2016. All Rights Reserved.</p>
-                <div class="social">
-                    <a class="fb" href="#"></a>
-                    <a class="tw" href="#"></a>
-                    <a class="google" href="#"></a>
-                    <a class="pin" href="#"></a>
-                </div>
-                <p class="copy">Terms & Conditions / Privacy policy & Cookies</p>
-            </div>
-        </div>
-    </footer>
-
-</body>
 
 </html>
